# kafka-dev

./: .gitignore  README.md
lab02_consumer/: build.gradle  pyproject.toml
lab02_consumer/src/: wind_turbine_api.py  wind_turbine_consumer.py
lab02_consumer/src/main/java/example/task01_names/: HelloConsumer.java
lab02_consumer/src/main/java/example/task02_international/: ConsumeInternational.java  InternationalGreeting.java  InternationalGreetingDeserializer.java
lab02_consumer/src/main/java/wind/: WindTurbineAPI.java  WindTurbineConsumer.java  WindTurbineData.java  WindTurbineDataDeserializer.java
lab07_hello_streams/: README.md  build.gradle  pyproject.toml
lab07_hello_streams/src/: hello_faust.py  wind_analyzer.py
lab07_hello_streams/src/main/java/example/: HelloStreams.java
lab07_hello_streams/src/main/java/wind/: WindAnalyzer.java  WindTurbineData.java  WindTurbineDataDeserializer.java  WindTurbineDataSerDe.java
lab11_joins/: build.gradle  pyproject.toml
lab11_joins/src/: datatypes.py  masterdata_joiner.py  wind_turbine_joiner.py
lab11_joins/src/main/java/example/: PersonalizedGreetings.java
lab11_joins/src/main/java/example/common/: GreetingTranslation.java  InternationalGreeting.java  JSONSerdes.java  NameAndLanguage.java
lab11_joins/src/main/java/wind/: GenerateData.java  WindTurbineData.java  WindTurbineJoiner.java
lab11_joins/src/main/java/wind/common/: JSONDeserializer.java  JSONSerializer.java
lab11_joins/src/main/java/wind/datatypes/: WeatherData.java  WeatherDataSupplier.java  WindTurbineDataWithMasterdata.java  (+4 more)
(+107 files in other folders)
