[tool.poetry]
name = "lab02-consumer"
version = "0.1.0"
description = ""
packages = [{include = "src"}]
authors = ["Anatoly Zelenin"]

[tool.poetry.dependencies]
python = "^3.10"
confluent-kafka = "^1.9.2"
bottle = "^0.12.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
